actualizacion de css

--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,23 @@ header {
 footer {
     border-top: 2px solid white;
 }
+
+.itemBusqueda{
+    display: flex;
+    background-color: #e00000;
+    padding-top: 15px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 15px;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+}
+.navBusqueda{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    height: 50px;
+    padding: 20px;
+}
