--- a/css/detallep.css
+++ b/css/detallep.css
@@ -9,8 +9,13 @@ h1 {
     font-size: 70px;
     display: flex;
     align-items: end;
-    margin: 13px;
+    margin: 20px;
 
+}
+
+.fav {
+    color: azure;
+    font-size: 20px;
 }
 
 h3 {
@@ -18,9 +23,42 @@ h3 {
     font-family: 'Urbanist', sans-serif;
     font-size: 15px;
     margin: 13px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    
 }
 
+.cast {
+    display: flex;
+    justify-content: end;
+    align-items: end;
+}
 
+.stars {
+    font-weight: 900;
+    color: rgb(247, 251, 5);
+    display: flex;
+    flex-wrap: wrap;
+    margin: 13px;
+
+}
+
+p {
+    color: white;
+    font-family: 'Jost', sans-serif;
+    margin: 13px;
+   
+}
+
+.rating {
+    font-family: 'Josefin Sans', sans-serif;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin:1px;
+    font-size: 19px;
+
+}
 
 .imagenPelicula {
     width: 100%;
