--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,122 @@ footer {
     height: 50px;
     padding: 20px;
 }
+
+.body-detalle {
+    background-color: black;
+}
+
+h1 {
+    color:white;
+    font-family: 'Alata', sans-serif;
+    font-size: 70px;
+    display: flex;
+    align-items: end;
+    margin: 15px;
+
+}
+
+.fav {
+    color: azure;
+    background-color: rgba(255, 255, 255, 0.272);
+    font-size: 20px;
+    margin-left: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 230px;
+    height: 50px;
+    border: solid rgb(9, 9, 22);
+}
+
+.fa-heart-circle-plus {
+    margin: 18px;
+    margin-left: -1px;
+    padding: 0%;
+    color: white;
+}
+
+h3 {
+    color: white;
+    font-family: 'Urbanist', sans-serif;
+    font-size: 15px;
+    margin: 13px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    
+}
+
+.cast {
+    display: flex;
+    justify-content: end;
+    align-items: end;
+}
+
+.stars {
+    font-weight: 900;
+    color: rgb(247, 251, 5);
+    display: flex;
+    flex-wrap: wrap;
+    margin: 13px;
+
+}
+
+.fa-house-chimney {
+    opacity: 0.6;
+    margin: -13px;
+    font-size: 20px;
+    position: fixed;
+    top: 10px;  
+    right: 10px; 
+    color: rgb(234, 91, 56);
+    margin: 13px;
+
+}
+
+.fa-heart {
+    opacity: 0.6;
+    margin: -13px;
+    font-size: 22px;
+    position: fixed;
+    top: 9px;  
+    right: 43px; 
+    color: rgb(234, 91, 56);
+    margin: 13px;
+
+}
+
+p {
+    color: white;
+    font-family: 'Jost', sans-serif;
+    font-size: 18px;
+    margin: 13px;
+   
+}
+
+.rating {
+    font-family: 'Josefin Sans', sans-serif;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin:1px;
+    font-size: 19px;
+
+}
+
+.imagenPelicula {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    position: absolute;
+    opacity: 0.5;
+}
+
+.footer-detalle {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    opacity: 0.5;
+
+}
