--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,8 @@ header {
     display: flex;
     color:white;
     font-family: 'Urbanist', sans-serif;
-    justify-content: center;
+    justify-content: flex-start;
+    font-size: 15px;
 }
 
 .navBar2 {
@@ -250,4 +251,14 @@ p {
     width: 100%;
     opacity: 0.5;
 
+}
+
+.fa-magnifying-glass {
+    color: #ffffff;
+}
+
+.infoExtra {
+    font-size: 10px;
+    opacity: 0.5;
+   margin: 0px;
 }
