--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ header {
     font-family: 'Urbanist', sans-serif;
     justify-content: flex-start;
     font-size: 18px;
+    width: 100%;
 }
 
 .navBar2 {
