--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,8 @@ header {
     font-family: 'Urbanist', sans-serif;
     justify-content: flex-start;
     font-size: 18px;
-    width: 100%;
+    width: 100%ASDI
+    ;
 }
 
 .navBar2 {
