--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ header {
 .section {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: space-around;
 }
 
@@ -34,7 +33,6 @@ header {
 
 .contenedor-input {
     padding-top: 10px;
-    padding-left: 720px;
 }
 
 .nav {
@@ -43,9 +41,8 @@ header {
 
 .navBar {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     height: 50px;
     padding: 0;
  
@@ -304,9 +301,7 @@ p {
     color: #e20707bc;
 
 }
-.navGen{
 
-}
 .itemGenero{
     display: flex;
     flex-wrap: wrap;
@@ -325,7 +320,6 @@ p {
     color: #ffffff;
 }
 
-<<<<<<< HEAD
 .p-serie {
 width: 500px;
 display: flex;
@@ -339,7 +333,7 @@ display: flex;
 margin: 13px;
 padding: 0px;
 }
-=======
+
 .infoExtra {
     display: flex;
     flex-wrap: wrap;
@@ -347,9 +341,6 @@ padding: 0px;
     width: 100%;
     justify-content: space-between;
 }
-<<<<<<< HEAD
->>>>>>> 0bee7e8620f92fd345f342b52ec005856b38eb8d
-=======
 
 .t {
     opacity: 0.5;
@@ -366,4 +357,370 @@ padding: 0px;
     font-size: 16px;
     margin: 0px;
 }
->>>>>>> 3d724eb348e3c1ae167821aa29359fc0ce68836d
+
+
+@media(max-width:420px){
+    body {
+        width: 100%;
+        padding: 0px;
+    }
+    
+    header {
+        border-bottom: 0px solid white;
+        width: 100%;
+        padding: 0px;
+    }
+    
+    
+    .button-fav {
+  
+        width: 15%;
+        border-radius: 5px;
+        font-weight: 800;
+        border: 1px solid white;
+        padding: 5px 15px;
+        margin: 13px;
+    }
+    
+    .section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .logo {
+        display: flex;
+        width: 20%;
+        flex-wrap: wrap;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    
+    .contenedor-input {
+        padding-top: 10px;
+        padding-left: 0px;
+    }
+    
+    .nav {
+        padding-top: 10px;
+    }
+    
+    .navBar {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-evenly;
+        height: 20px;
+        padding: 0;
+        width: 100%;
+     
+     
+    }
+    
+    .text {
+        text-decoration: none;
+        color:white;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 100;
+    }
+    
+    .itemHeader {
+        display: flex;
+        padding-top: 5px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 5px;
+        width: 70px;
+        justify-content: center;
+        align-items: center;
+        margin: 0px 10px;
+    
+    }
+    
+    .titulo {
+
+        font-size: 25px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 100;
+        padding-top: 15px;
+        padding-left: 15px;
+    }
+    .cajaPadre {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        padding: 10px;
+    }
+    
+    .cajaHija {
+        width: 80%;
+        display: flex;
+        margin-bottom: 40px;
+    }
+    
+    
+    .imagen {
+        width: 100%;
+        border: 3px solid red;
+    }
+    
+    .texto1 {
+        display: flex;
+        color:white;
+        font-family: 'Urbanist', sans-serif;
+        justify-content: flex-start;
+        font-size: 18px;
+        width: 100%;
+    }
+    
+    .navBar2 {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-evenly;
+        height: 50px;
+        padding-top: 20px;
+        list-style: none;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 700;
+    }
+    
+    footer {
+        border-top: 2px solid white;
+    }
+    
+    .itemBusqueda{
+        display: flex;
+        padding-top: 5px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 5px;
+        justify-content: center;
+        align-items: center;
+        width: 80px;
+        height: 25px;
+    }
+    .navBusqueda{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        height: 30px;
+        padding: 20px;
+    }
+    
+    .body-detalle {
+        background-color: black;
+    }
+    
+    h1 {
+        color:white;
+        font-family: 'Alata', sans-serif;
+        font-size: 70px;
+        display: flex;
+        align-items: end;
+        margin: 15px;
+    
+    }
+    
+    h2 {
+        color:white;
+        font-family: 'Alata', sans-serif;
+        font-size: 40px;
+        display: flex;
+        align-items: end;
+        margin: 15px;
+    
+    }
+    .fav {
+        color: azure;
+        background-color: rgba(255, 255, 255, 0.272);
+        font-size: 20px;
+        margin-left: 0px;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        width: 230px;
+        height: 50px;
+        border: solid rgb(9, 9, 22);
+    }
+    
+    .contenedor-cast {
+        width: 300px;
+    }
+    
+    .fa-heart-circle-plus {
+        margin: 18px;
+        margin-left: -50px;
+        padding: 0%;
+        color: white;
+    }
+    
+    h3 {
+        color: white;
+        font-family: 'Urbanist', sans-serif;
+        font-size: 15px;
+        margin: 13px;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        
+    }
+    
+    .cast {
+        display: flex;
+        justify-content: start;
+        align-items: start;
+    }
+    
+    .stars {
+        font-weight: 900;
+        color: rgb(247, 251, 5);
+        display: flex;
+        flex-wrap: wrap;
+        margin: 13px;
+    
+    }
+    
+    .fa-house-chimney {
+        opacity: 0.6;
+        margin: -13px;
+        font-size: 20px;
+        position: fixed;
+        top: 10px;  
+        right: 10px; 
+        color: rgb(234, 91, 56);
+        margin: 13px;
+    
+    }
+    
+    /* test de prueba*/
+    
+    .fa-heart {
+        opacity: 0.6;
+        margin: -13px;
+        font-size: 22px;
+        position: fixed;
+        top: 9px;  
+        right: 43px; 
+        color: rgb(234, 91, 56);
+        margin: 13px;
+    
+    }
+    
+    p {
+        color: white;
+        font-family: 'Jost', sans-serif;
+        font-size: 18px;
+        margin: 13px;
+       
+    }
+    
+    .rating {
+        font-family: 'Josefin Sans', sans-serif;
+        flex-wrap: wrap;
+        flex-direction: row;
+        margin:1px;
+        font-size: 19px;
+    
+    }
+    
+    .imagenPelicula {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: start;
+        align-items: start;
+        position: absolute;
+        opacity: 0.5;
+    }
+    
+    .imagenSerie {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: start;
+        align-items: start;
+        position: absolute;
+        opacity: 0.5;
+    }
+    
+    .footer-detalle {
+    
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        opacity: 0.5;
+    
+    }
+    
+    /* ordenar generos 3x3 */
+    .navGenero{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 50px;
+        padding-bottom: 0px;
+    
+    }
+    
+    .itemGenero{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        background-color: #9f0505a2;
+        padding-top: 15px;
+        padding-left: 175px;
+        padding-right: 175px;
+        padding-bottom: 15px;
+        justify-items: space-between;
+        align-items: center;
+    
+    }
+    
+    .fa-magnifying-glass {
+        color: #ffffff;
+    }
+    
+    .p-serie {
+    width: 500px;
+    display: flex;
+    margin: 2px;
+    padding: 0px;
+    }
+    
+    .p-pelicula {
+    width: 500px;
+    display: flex;
+    margin: 13px;
+    padding: 0px;
+    }
+
+    .infoExtra {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .t {
+        opacity: 0.5;
+        font-size: 14px;
+        margin: 0px;
+    }
+    .fa-star {
+        color: yellow;
+        display: flex;
+        padding-right: 0px;
+        padding-left: 220px;
+    }
+    .t1 {
+        opacity: 0.5;
+        font-size: 16px;
+        margin: 0px;
+    }
+
+}
