--- a/css/style.css
+++ b/css/style.css
@@ -376,8 +376,6 @@ opacity: 0.6;
     width: 100%;
     justify-content: space-between;
 }
-
-
 .t {
     opacity: 0.5;
     font-size: 14px;
@@ -393,3 +391,5 @@ opacity: 0.6;
     font-size: 16px;
     margin: 0px; 
 }
+
+@media ()
