--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,8 @@ opacity: 0.6;
     opacity: 0.5;
     font-size: 17px;
     margin: 0px;
+    color: white;
+    font-family: 'Urbanist', sans-serif;;
 }
 
 @media (max-width : 420px) {
@@ -406,7 +408,6 @@ opacity: 0.6;
 }
 
 @media(max-width:420px) {
-
     .section{
         display: flex;
         flex-direction: column;
@@ -414,17 +415,7 @@ opacity: 0.6;
         align-items: center;
         align-content: center;
     }
-    .itemHeader{
-        display: flex;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        width: 70px;
-        justify-content: center;
-        align-items: center;
-        margin: 0px 10px;
-    }
+
     .itemBusqueda{
         display: flex;
         padding-left: 20px;
@@ -449,4 +440,71 @@ opacity: 0.6;
         padding-top: 20px;
         list-style: none;
     }
-}   
+
+    .logo {
+        display: flex;
+        width: 25%;
+        flex-wrap: wrap;
+        padding-top: 10px;
+        padding-left: 10px;
+    }
+    .nav {
+        padding-top: 30px;
+        padding-bottom: 10px;
+    }
+
+    .navBar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+    }
+
+    .itemHeader {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 5px;
+        width: 100%;
+        padding: 10px;
+    }
+
+    .navBar2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 0px;
+    }
+
+    .footerNames {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .titulo {
+        display: flex;
+        color: #ffffff;
+        font-size: 30px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 700;
+        padding-top: 15px;
+        background-color: black;
+    }
+    .navGenero {
+    margin: 0px
+    }
+
+    .itemGenero {
+    flex-wrap: wrap;
+    background-color: #9f0505a2;
+    margin: 5px;
+    width: 100%;
+    display: flex;
+    margin: 5px;
+    }
+}
+
