--- a/css/style.css
+++ b/css/style.css
@@ -214,13 +214,12 @@ h2 {
 }
 
 .cast {
-    display: flex;
-    justify-content: end;
-    margin-left: 1230px;
     align-items: start;
     color: white;
     font-family: 'Jost', sans-serif;
     font-size: 15px;
+    padding-left: 10px;
+    padding-top: 10px;
     width: 150px;
     opacity: 0.5;
 }
@@ -286,40 +285,15 @@ p {
 }
 
 
-.imagenPelicula {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: start;
-    align-items: start;
-    position: absolute;
-    z-index: -1; 
-    opacity: 0.5;
-}
-
 .imagenSerie {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
     display: flex;
-    justify-content: start;
-    align-items: start;
-    position: absolute;
-    z-index: -1; 
-    opacity: 0.5;
-   /* z-index sirve para ordenar la superposicion de etiquetas*/
-}
-
-.footer-detalle {
-
     position: fixed;
-    bottom: 0;
-    width: 100%;
     opacity: 0.5;
-
 }
+
 
 /* ordenar generos 3x3 */
-
 
 .navGenero{
     margin: 10px;
@@ -400,6 +374,12 @@ opacity: 0.6;
     font-family: 'Urbanist', sans-serif;;
 }
 
+.divImage {
+    background-image: url(../img/megan-fondo.png);
+    opacity: 0.8;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 @media(max-width:420px) {
     .section{
         display: flex;
@@ -567,3 +547,4 @@ opacity: 0.6;
     .tituloserie-peli {
         font-size: 35px;
     }
+}
