--- a/css/style.css
+++ b/css/style.css
@@ -390,14 +390,18 @@ opacity: 0.6;
 .fa-star {
     color: yellow;
     display: flex;
-    padding-left: 180px;
+    padding-left: 160px;
 }
 .t1 {
     opacity: 0.5;
     font-size: 17px;
     margin: 0px;
     color: white;
-    font-family: 'Urbanist', sans-serif;;
+    font-family: 'Urbanist', sans-serif;
+    padding-left: 0px;
+}
+.oculto{
+    display: none;
 }
 
 @media(max-width:420px) {
@@ -567,3 +571,12 @@ opacity: 0.6;
     .tituloserie-peli {
         font-size: 35px;
     }
+    .t1{
+        margin: 0px;
+        padding: 0px;
+    }
+    .fa-solid.fa-star{
+        padding-left: 210px;
+
+    }
+}
