--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,6 @@ h3.rating {
 
 }
 
-/* test de prueba*/
 
 .fa-heart {
     opacity: 0.6;
@@ -332,20 +331,20 @@ p {
   
 
 
-.p-serie {
-width: 500px;
-display: flex;
-margin: 6px;
-padding: 0px;
-opacity: 0.8;
+    .p-serie {
+    width: 500px;
+    display: flex;
+    margin: 13px;
+    padding: 0px;
+    opacity: 0.6;
 }
 
-.p-pelicula {
-width: 500px;
-display: flex;
-margin: 13px;
-padding: 0px;
-opacity: 0.6;
+    .p-pelicula {
+    width: 500px;
+    display: flex;
+    margin: 13px;
+    padding: 0px;
+    opacity: 0.6;
 
 }
 
@@ -392,6 +391,7 @@ opacity: 0.6;
     opacity: 0.8;
     background-size: cover;
     background-repeat: no-repeat;
+    height: 67vh;
 }
 
 @media(max-width:420px) {
@@ -401,14 +401,25 @@ opacity: 0.6;
         justify-content: center;
         align-items: center;
     }
-
-    .itemBusqueda{
+    .navBusqueda {
         display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0px;
+        height: 100%;
+    }
+    
+    .itemBusqueda {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        margin: 5px;
         padding-left: 20px;
         padding-right: 20px;
         padding-top: 5px;
         padding-bottom: 5px;
-        width: 80px;
         justify-content: center;
         align-items: center;
         height: 25px;
@@ -473,7 +484,7 @@ opacity: 0.6;
         background-color: black;
     }
     .navGenero {
-    margin: 0px
+        margin: 0px
     }
 
     .itemGenero {
@@ -486,11 +497,9 @@ opacity: 0.6;
     }
 
     .tituloserie-peli {
-        font-size: 45px;
-    }
-
-    .p-serie-pelicula {
-        font-size: 15px;
+        font-size: 35px;
+        margin: 8px;
+        padding: 0px;
     }
 
     .agregar-favoritos {
@@ -519,44 +528,41 @@ opacity: 0.6;
         font-size: 13px;
         margin: 0px;
         padding-left: 10px;
+        align-items: start;
     }
 
     h3.rating {
+        display: flex;
         font-size: 16px;
-        padding-top: 3px;
+        padding: 0px;
+        margin: 0px;
+        margin-left: 5px;
     }
 
-    .duracion {
-        font-size: 13px;
-    }
-
-    .datos {
-        font-size: 14px;
-    }
-
-    .p-serie-pelicula {
-        font-size: 15px;
-    }
 
     .tituloserie-peli {
         font-size: 35px;
     }
+
     .divImage1 {
+        opacity: 0.8;
+        background-image: none;
+    }
+
+    .divImage {
         opacity: 0.8;
         background-image: none;
     }
 
     .duracion {
         font-size: 13px;
-        padding-left: 10px;
-        margin: 0px;
         margin-bottom: 10px;
-    
+        padding: 0px;
     }
     .datos {
         margin: 0px;
         font-size: 14px;
-        padding-left: 10px;
+        margin: 10px;
     }
 
     .cast {
@@ -574,12 +580,24 @@ opacity: 0.6;
     }
 
     .p-serie {
-
         display: flex;
         flex-wrap: wrap;
         margin-top: 15px;
+        margin-bottom: 10px;
+        margin-left: 0px;
         padding: 0px;
         opacity: 0.8;
-         width: 100%;
+        width: 100%;
+    }
+
+    .p-pelicula{
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 15px;
+        margin-bottom: 10px;
+        margin-left: 0px;
+        padding: 0px;
+        opacity: 0.8;
+        width: 100%;
     }
 }
