--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,12 @@ body {
     background-color: black;
 }
 
-header {
+header { 
     border-bottom: 0px solid white;
 }
 
 
-.agregar-favoritos {
+.agregar-favoritos {  
     color: beige;
     width: 15%;
     text-decoration: none;
@@ -68,13 +68,13 @@ header {
     padding-bottom: 10px;
     margin: 20px;
 }
-
+/*  */
 .titulo {
     display: flex;
     color: #ffffff;
     font-size: 30px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
+    font-family: 'Roboto', sans-serif; 
+    font-weight: 700; 
     padding-top: 15px;
     background-color: black;
 }
@@ -238,7 +238,7 @@ h2 {
     margin: 0;
 }
 
-h3.rating {
+h3.rating { 
     font-family: 'Josefin Sans', sans-serif;
     flex-wrap: wrap;
     flex-direction: row;
@@ -520,12 +520,12 @@ opacity: 0.6;
     .p-serie-pelicula {
         font-size: 15px;
     }
-
+/*  */
     .agregar-favoritos {
         font-size: 12px;
         color: beige;
         width: 15%;
-        text-decoration: none;
+        text-decoration: none; 
         background-color: rgba(216, 238, 238, 0.437);
         border-radius: 50px;
         font-weight: 800;
