--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,17 @@ header {
     padding-left: 10px;
 }
 
+.tmdb-logo {
+    display: flex;
+    width: 5%;
+    height: 90%;
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+
+    
+}
 .contenedor-input {
     padding-top: 10px;
 
